# csit-challenge

./: .gitignore  README.md  pyproject.toml
notebooks/: task3.ipynb
